--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,11 +89,12 @@ img {
 
 /*==================== NAV ====================*/
 .nav {
-  width: 1620px;
+  width: 100%;
   height: 54px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin: 0px 20px;
 }
 
 .nav__menu {
@@ -103,13 +104,14 @@ img {
   width: 35%;
   height: 100%;
   background-color: var(--secondary-color);
-  /* transition: 0.6s; */
+  transition: all 1.5s ease 0s;
 }
 
 .nav__logo,
 .nav__socials,
 .nav__toggle {
   color: var(--primary-color);
+  cursor: pointer;
 }
 
 .nav__list {
@@ -123,23 +125,25 @@ img {
 
 .nav__link {
   display: flex;
-  padding: 12px 15px;
-  margin: 10px;
-  font-size: var(--small-font-size-1);
+  font-size: var(--normal-font-size-1);
   color: var(--primary-color);
   font-weight: var(--font-light);
   opacity: 1;
 }
 
 .nav__link:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
-.nav__link::after {
+.nav__link > span {
+  padding: 15px 20px;
+}
+
+.nav__link > span::after {
   content: '';
   display: block;
-  width: 100%;
-  height: 2px;
+  width: 50%;
+  height: 1px;
   border-radius: 5px;
   opacity: 1;
 
@@ -148,18 +152,29 @@ img {
   position: relative;
   top: 100%;
   left: 0;
+  margin: 0 auto;
   z-index: var(--z-tooltip);
 
-  transition: all 0.4s ease-in-out;
+  transition: all 0.5s ease;
+}
+
+.nav__link > span:hover::after {
+  width: 100%;
 }
 
 .nav__close {
   position: absolute;
-  right: 0;
-  top: 0;
+  top: 30;
+  right: 20;
   font-size: var(--normal-font-size-1);
   cursor: pointer;
   color: var(--primary-color);
+  transition: all 0.5s linear;
+}
+
+.nav__close:hover {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .nav__btns {
@@ -173,3 +188,58 @@ img {
 .show-menu {
   right: 0;
 }
+
+/*==================== FOOTER ====================*/
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--small-font-size-1);
+  color: var(--primary-color);
+}
+
+/*==================== TOOLTIPS ====================*/
+.tooltip {
+}
+
+.tooltip::after {
+  background: rgba(0, 0, 0, 0.8);
+  border-radius: 8px 8px 8px 0px;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  color: #fff;
+  font-size: var(--small-font-size-1);
+  content: attr(data-tooltip);
+  margin-top: 40px;
+  opacity: 0;
+  padding: 3px 7px;
+  position: absolute;
+  visibility: hidden;
+
+  transition: all 0.4s ease-in-out;
+}
+
+.tooltip:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* animation */
+
+/* .nav__close:hover {
+  animation-name: spin;
+  animation-duration: 1.5s;
+  animation-iteration-count: 1;
+} */
+
+/* @keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(-180deg);
+  }
+} */
