--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--secondary-color);
+  background-color: transparent;
 }
 
 /*==================== NAV ====================*/
@@ -187,6 +187,90 @@ img {
 /* show menu */
 .show-menu {
   right: 0;
+}
+
+/*==================== SLIDER ====================*/
+.home__container {
+  width: 100%;
+  display: flex;
+}
+
+.slide {
+  height: 100vh;
+  cursor: pointer;
+  color: #fff;
+  flex: 1;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  transition: all 500ms ease-in-out;
+}
+
+.slide::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.4);
+  transition: all 0.5s ease 0s;
+}
+
+/* .slide:hover::before {
+  background-color: rgba(0, 0, 0, 0);
+} */
+
+.slide.active::before {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.slide h3 {
+  position: absolute;
+  font-size: var(--normal-font-size-1);
+  font-weight: var(--font-thin);
+  bottom: 20px;
+  left: 20px;
+  margin: 0;
+  opacity: 0;
+}
+
+.slide p {
+  position: absolute;
+  text-align: justify;
+  font-size: var(--normal-font-size-3);
+  bottom: -100%;
+  left: 0px;
+  right: 20px;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.7s ease-in-out 0.2s;
+}
+
+.slide.active {
+  flex: 2;
+}
+
+.slide.active h3 {
+  opacity: 1;
+  transition: all 0.7s ease-in-out 0.2s;
+}
+
+.slide.active:hover h3 {
+  bottom: 270px;
+  left: 20px;
+  opacity: 1;
+}
+
+.slide.active:hover p {
+  bottom: 80px;
+  left: 20px;
+  opacity: 1;
+  visibility: visible;
 }
 
 /*==================== FOOTER ====================*/
