--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,11 @@ input {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+.icon {
+  width: 32px;
+  height: 32px;
+}
+
 /*==================== NAV ====================*/
 .nav {
   width: 100%;
@@ -169,11 +174,12 @@ input {
 
 .nav__close {
   position: absolute;
-  top: 30;
-  right: 20;
+  top: 30px;
+  right: 20px;
   font-size: var(--normal-font-size-1);
   cursor: pointer;
   color: var(--primary-color);
+  z-index: 999;
   transition: all 0.5s linear;
 }
 
@@ -237,7 +243,7 @@ input {
   margin: 0;
   opacity: 0;
   font-size: var(--normal-font-size-1);
-  font-weight: var(--font-thin);
+  font-weight: var(--font-light);
 }
 
 .slide p {
@@ -376,8 +382,8 @@ input {
   font-weight: var(--font-thin);
 }
 
-.contanct__button {
-  padding: 20 40px;
+.contact__button {
+  padding: 20px 40px;
   margin: 100px 0px;
   font-size: var(--small-font-size-2);
   font-weight: var(--font-regular);
@@ -387,7 +393,7 @@ input {
   cursor: pointer;
 }
 
-.contanct__button:hover {
+.contact__button:hover {
   background-color: var(--accent-color);
   color: var(--primary-color);
 }
